Fixed some annoying issues with height, width, spacing, etc. We are finally back to a good commit point. Now to add the LCR features

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    height: 100vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    max-width: 25rem;
     background-color: rgb(83, 83, 83);
     font-family: sans-serif;
 }
@@ -8,8 +18,9 @@ body {
     border: 3px black solid;
     background-color: #7C73C0;
     /* background-color: #827cc8; */
-    max-width: 25%;
-    max-height: 40rem;
+    max-width: 30rem;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
@@ -20,12 +31,12 @@ h1 {
 }
 
 #inputContainer {
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-align-content: space-evenly;
-color: #82ffc1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: space-evenly;
+    color: #82ffc1;
 }
 
 #inputContainer input {
@@ -55,7 +66,7 @@ p {
 
 #clear {
     text-align: center;
-    margin: 6px;
+    margin-top: 6px;
 }
 
 #grandTotalText {
@@ -63,20 +74,21 @@ p {
 }
 
 #bottomBorderContainer {
-background-color: #E8FFCE;
-border-radius: 5%;
-width: 50%;
-justify-content: center;
-text-align: center;
-margin-left: 25%;
-margin-bottom: 1rem;
+    background-color: #E8FFCE;
+    border-radius: 5%;
+    width: 15rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-bottom: 0.5rem;
+    margin-top: -1.2rem;
 }
 
 h4 {
-text-align: center;
-margin-top: -1em;
-margin-bottom: -1rem;
-padding-top: 0.5rem;
+    text-align: center;
+    margin-top: -1em;
+    margin-bottom: -1rem;
+    padding-top: 0.5rem;
 }
 
 #billTotal {
@@ -110,11 +122,21 @@ padding-top: 0.5rem;
     text-align: center;
     border: 2px solid red;
     background-color: white;
+    margin-bottom: -1rem;
 }
 
-#buttonContainer{
+#bottomButtonContainer {
     display: flex;
-    justify-content: center;
-    
-    padding-bottom: 1rem;
+    justify-content: center;    
+    padding-bottom: 0.5rem;
+}
+
+/* #calculatorContainer{
+    max-width: 25%;
+    max-height: 30rem;
+} */
+
+#moveCenterButton {
+    margin-left: 1px;
+    margin-right: 1px;
 }
